# practice_scraping

./: .gitignore  README.md  main.py  pyproject.toml
helpers/: selenium_template.py  sqlite3_helper.py
